force-app/main/default/objects/SAI_Application_Asset__c/SAI_Application_Asset__c.object-meta.xml
<CustomObject>
    <label>SAI Application Asset</label>
    <nameField>
        <displayFormat>AA-{00000000}</displayFormat>
        <label>SAI Application Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAI Application Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>