force-app/main/default/objects/SAI_Application_Asset__c/fields/Application_Asset_Source_System__c.field-meta.xml
<CustomField>
    <fullName>Application_Asset_Source_System__c</fullName>
    <label>Application Asset Source System</label>
    <length>50</length>
    <type>Text</type>
</CustomField>