force-app/main/default/objects/SAI_Application_Asset__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <label>Asset Type</label>
    <type>TextArea</type>
</CustomField>