force-app/main/default/objects/SAI_Application_Asset__c/fields/Dealer_Subsidy_Amount__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Subsidy_Amount__c</fullName>
    <label>Dealer Subsidy Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>