force-app/main/default/objects/SAI_Application_Asset__c/fields/External_Reference_Asset__c.field-meta.xml
<CustomField>
    <fullName>External_Reference_Asset__c</fullName>
    <label>External Reference Asset</label>
    <type>TextArea</type>
</CustomField>