force-app/main/default/objects/SAI_Application_Asset__c/fields/Global_Master_Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Global_Master_Asset_Type__c</fullName>
    <label>Global Master Asset Type</label>
    <type>TextArea</type>
</CustomField>