force-app/main/default/objects/SAI_Application_Asset__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <label>Make</label>
    <type>TextArea</type>
</CustomField>