force-app/main/default/objects/SAI_Application_Asset__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>TextArea</type>
</CustomField>