force-app/main/default/objects/SAI_Application_Asset__c/fields/Net_Principal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Principal_Amount__c</fullName>
    <label>Net Principal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>