force-app/main/default/objects/SAI_Application_Asset__c/fields/Number_Of_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Units__c</fullName>
    <label>Number Of Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>