force-app/main/default/objects/SAI_Application_Asset__c/fields/Object_Category__c.field-meta.xml
<CustomField>
    <fullName>Object_Category__c</fullName>
    <label>Object Category</label>
    <type>TextArea</type>
</CustomField>