force-app/main/default/objects/SAI_Application_Asset__c/fields/Object_Category_Number__c.field-meta.xml
<CustomField>
    <fullName>Object_Category_Number__c</fullName>
    <label>Object Category Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>