force-app/main/default/objects/SAI_Application_Asset__c/fields/Used_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Used_Indicator__c</fullName>
    <label>Used Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>