force-app/main/default/objects/SAI_Application_Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Application_Asset_Number__c</columns>
    <columns>Application_Asset_Source_System__c</columns>
    <columns>Application_Number__c</columns>
    <columns>Application_Source_System__c</columns>
    <columns>Asset_Type__c</columns>
    <columns>Global_Master_Asset_Type__c</columns>
    <columns>Global_Master_Asset_Type_Code__c</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Net_Principal_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>